ปรับระบบเป็น php api
